--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,1 +1,8 @@
+{% extends 'base.html.twig' %}
+
+{% block title %}Wild Series{% endblock %}
+
+{% block body %}
 <h1>Bienvenue !</h1>
+<img src="{{ asset('build/images/brek-jaune.png') }}" alt="breaking bad image">
+{% endblock %}
